* Fixed styling of default buttons (was removed in latest controller commit). * Made forms a bit more readable.

--- a/themes/steelblue/styles/style.css
+++ b/themes/steelblue/styles/style.css
@@ -386,7 +386,7 @@ input.atkdefaultbutton
 
 #editform td.field
 {
-  padding-top: 2px;
+  padding-top: 5px;
   padding-bottom: 2px;
   vertical-align: top;
 }
